--- a/public/equineMenu.html
+++ b/public/equineMenu.html
@@ -25,6 +25,7 @@
         <div class="boxContainer" id="containerBox">
             <button class="addForm" onclick="location.href = 'addEquineForm.html'">Add Form</button>
             <button class="viewForm" onclick="location.href = 'viewEquineForm.html'">View Forms</button>
+            <button class="editForm" onclick="location.href = 'editRemoveEquineForm.html'">Delete Forms</button>
         </div>
     </div>
   </body>
